Fixed the padding and the alignment of the text and buttons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,33 +5,29 @@
 
 body {
   background-color: rgb(22, 59, 82);
+  height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .login {
   display: flex;
   align-items: center;
-  justify-content: center;
   text-align: center;
   color: #fff;
+  margin: auto;
 }
 
 .log-sec {
   flex: 1;
+  padding: 4rem;
 }
 
 .login-text p {
-  line-height: 1.4rem;
+  line-height: 2rem;
   font-size: 1.2rem;
-  max-width: 40ch;
+  max-width: 50ch;
   margin: auto;
-}
-
-.login ul {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  align-items: center;
-  justify-content: center;
 }
 
 .login ul li {
@@ -39,17 +35,33 @@ body {
   font-size: 1.2rem;
   list-style: none;
   cursor: pointer;
-  height: 4rem;
-  width: 10rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .login-btns {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 h1 {
   text-align: center;
   font-size: 2rem;
+}
+
+ul {
+  padding-left: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+li {
+  padding: 1.4rem;
+}
+
+li:active {
+  background-color: rgb(17, 50, 71);
 }
